#986 fix horizontal scrollbar issue for Safari (#1188)
adding top margin helps solving issue with horizontal scrollbar issue
for Safari when mouse is attached or system scrollbars visibility set
to ‘always’ (macOS)

--- a/ng2-components/ng2-activiti-form/src/components/widgets/dynamic-table/dynamic-table.widget.css
+++ b/ng2-components/ng2-activiti-form/src/components/widgets/dynamic-table/dynamic-table.widget.css
@@ -2,6 +2,10 @@
     padding: 8px;
 }
 
+.dynamic-table-widget__buttons {
+    margin-top: 10px;
+}
+
 .dynamic-table-widget__row-selected,
 .dynamic-table-widget__row-selected:hover {
     background-color: #eef !important;
